@@ -54,6 +54,10 @@ enum LIBSMDEV_CODEPAGE
 	LIBSMDEV_CODEPAGE_KOI8_U			= 21866,
 
 	LIBSMDEV_CODEPAGE_WINDOWS_874			= 874,
+	LIBSMDEV_CODEPAGE_WINDOWS_932			= 932,
+	LIBSMDEV_CODEPAGE_WINDOWS_936			= 936,
+	LIBSMDEV_CODEPAGE_WINDOWS_949			= 949,
+	LIBSMDEV_CODEPAGE_WINDOWS_950			= 950,
 	LIBSMDEV_CODEPAGE_WINDOWS_1250			= 1250,
 	LIBSMDEV_CODEPAGE_WINDOWS_1251			= 1251,
 	LIBSMDEV_CODEPAGE_WINDOWS_1252			= 1252,
@@ -96,6 +100,10 @@ enum LIBSMDEV_CODEPAGE
 #define LIBSMDEV_CODEPAGE_KOI8_UKRAINIAN		LIBSMDEV_CODEPAGE_KOI8_U
 
 #define LIBSMDEV_CODEPAGE_WINDOWS_THAI			LIBSMDEV_CODEPAGE_WINDOWS_874
+#define LIBSMDEV_CODEPAGE_WINDOWS_JAPANESE		LIBSMDEV_CODEPAGE_WINDOWS_932
+#define LIBSMDEV_CODEPAGE_WINDOWS_CHINESE_SIMPLIFIED	LIBSMDEV_CODEPAGE_WINDOWS_936
+#define LIBSMDEV_CODEPAGE_WINDOWS_KOREAN		LIBSMDEV_CODEPAGE_WINDOWS_949
+#define LIBSMDEV_CODEPAGE_WINDOWS_CHINESE_TRADITIONAL	LIBSMDEV_CODEPAGE_WINDOWS_950
 #define LIBSMDEV_CODEPAGE_WINDOWS_CENTRAL_EUROPEAN	LIBSMDEV_CODEPAGE_WINDOWS_1250
 #define LIBSMDEV_CODEPAGE_WINDOWS_CYRILLIC		LIBSMDEV_CODEPAGE_WINDOWS_1251
 #define LIBSMDEV_CODEPAGE_WINDOWS_WESTERN_EUROPEAN	LIBSMDEV_CODEPAGE_WINDOWS_1252
