@@ -65,6 +65,10 @@ enum LIBSMDEV_CODEPAGE
 	LIBSMDEV_CODEPAGE_KOI8_U			= 21866,
 
 	LIBSMDEV_CODEPAGE_WINDOWS_874			= 874,
+	LIBSMDEV_CODEPAGE_WINDOWS_932			= 932,
+	LIBSMDEV_CODEPAGE_WINDOWS_936			= 936,
+	LIBSMDEV_CODEPAGE_WINDOWS_949			= 949,
+	LIBSMDEV_CODEPAGE_WINDOWS_950			= 950,
 	LIBSMDEV_CODEPAGE_WINDOWS_1250			= 1250,
 	LIBSMDEV_CODEPAGE_WINDOWS_1251			= 1251,
 	LIBSMDEV_CODEPAGE_WINDOWS_1252			= 1252,
