@@ -224,6 +224,18 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\libuna\libuna_codepage_windows_874.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\libuna\libuna_codepage_windows_932.c"
+				>
+			</File>
+			<File
+				RelativePath="..\..\libuna\libuna_codepage_windows_936.c"
+				>
+			</File>
+			<File
 				RelativePath="..\..\libuna\libuna_codepage_windows_1250.c"
 				>
 			</File>
@@ -260,19 +272,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\libuna\libuna_codepage_windows_874.c"
-				>
-			</File>
-			<File
 				RelativePath="..\..\libuna\libuna_support.c"
 				>
 			</File>
 			<File
 				RelativePath="..\..\libuna\libuna_unicode_character.c"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libuna\libuna_url_stream.c"
 				>
 			</File>
 			<File
@@ -330,15 +334,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\libuna\libuna_codepage_iso_8859_1.h"
-				>
-			</File>
-			<File
 				RelativePath="..\..\libuna\libuna_codepage_iso_8859_10.h"
-				>
-			</File>
-			<File
-				RelativePath="..\..\libuna\libuna_codepage_iso_8859_11.h"
 				>
 			</File>
 			<File
@@ -398,6 +394,18 @@
 				>
 			</File>
 			<File
+				RelativePath="..\..\libuna\libuna_codepage_windows_874.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\libuna\libuna_codepage_windows_932.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\libuna\libuna_codepage_windows_936.h"
+				>
+			</File>
+			<File
 				RelativePath="..\..\libuna\libuna_codepage_windows_1250.h"
 				>
 			</File>
@@ -434,10 +442,6 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\libuna\libuna_codepage_windows_874.h"
-				>
-			</File>
-			<File
 				RelativePath="..\..\libuna\libuna_definitions.h"
 				>
 			</File>
@@ -466,7 +470,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\libuna\libuna_url_stream.h"
+				RelativePath="..\..\libuna\libuna_unused.h"
 				>
 			</File>
 			<File
